--- a/src/output.css
+++ b/src/output.css
@@ -551,6 +551,9 @@
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
+  .top-\[5\%\] {
+    top: 5%;
+  }
   .top-\[100px\] {
     top: 100px;
   }
@@ -560,14 +563,41 @@
   .top-\[1px\] {
     top: 1px;
   }
-  .top-\[5\%\] {
-    top: 5%;
-  }
   .top-\[20px\] {
     top: 20px;
   }
+  .-right-0 {
+    right: calc(var(--spacing) * -0);
+  }
+  .-right-1 {
+    right: calc(var(--spacing) * -1);
+  }
+  .-right-2 {
+    right: calc(var(--spacing) * -2);
+  }
+  .-right-3 {
+    right: calc(var(--spacing) * -3);
+  }
+  .-right-5 {
+    right: calc(var(--spacing) * -5);
+  }
   .-right-9 {
     right: calc(var(--spacing) * -9);
+  }
+  .-right-10 {
+    right: calc(var(--spacing) * -10);
+  }
+  .-right-11 {
+    right: calc(var(--spacing) * -11);
+  }
+  .-right-16 {
+    right: calc(var(--spacing) * -16);
+  }
+  .-right-20 {
+    right: calc(var(--spacing) * -20);
+  }
+  .-right-110 {
+    right: calc(var(--spacing) * -110);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -578,8 +608,14 @@
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
+  .right-4 {
+    right: calc(var(--spacing) * 4);
+  }
   .right-5 {
     right: calc(var(--spacing) * 5);
+  }
+  .right-6 {
+    right: calc(var(--spacing) * 6);
   }
   .right-\[0px\] {
     right: 0px;
@@ -590,11 +626,47 @@
   .-bottom-0 {
     bottom: calc(var(--spacing) * -0);
   }
+  .-bottom-1 {
+    bottom: calc(var(--spacing) * -1);
+  }
+  .-bottom-2 {
+    bottom: calc(var(--spacing) * -2);
+  }
+  .-bottom-3 {
+    bottom: calc(var(--spacing) * -3);
+  }
+  .-bottom-5 {
+    bottom: calc(var(--spacing) * -5);
+  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .bottom-1 {
+    bottom: calc(var(--spacing) * 1);
+  }
+  .bottom-2 {
+    bottom: calc(var(--spacing) * 2);
+  }
+  .bottom-3 {
+    bottom: calc(var(--spacing) * 3);
+  }
+  .bottom-5 {
+    bottom: calc(var(--spacing) * 5);
+  }
+  .bottom-\[1\] {
+    bottom: 1;
+  }
+  .bottom-\[1p\] {
+    bottom: 1p;
+  }
+  .bottom-\[1px\] {
+    bottom: 1px;
+  }
   .-left-5 {
     left: calc(var(--spacing) * -5);
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
   }
   .left-1 {
     left: calc(var(--spacing) * 1);
@@ -608,6 +680,15 @@
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .z-4 {
+    z-index: 4;
+  }
+  .z-5 {
+    z-index: 5;
+  }
+  .z-10 {
+    z-index: 10;
+  }
   .z-20 {
     z-index: 20;
   }
@@ -616,6 +697,9 @@
   }
   .z-50 {
     z-index: 50;
+  }
+  .clear-both {
+    clear: both;
   }
   .container {
     width: 100%;
@@ -637,6 +721,9 @@
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .my-10 {
+    margin-block: calc(var(--spacing) * 10);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -673,6 +760,10 @@
   }
   .table {
     display: table;
+  }
+  .size-1 {
+    width: calc(var(--spacing) * 1);
+    height: calc(var(--spacing) * 1);
   }
   .size-4 {
     width: calc(var(--spacing) * 4);
@@ -718,8 +809,38 @@
     width: 100%;
     height: 100%;
   }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
+  }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
+  .h-2 {
+    height: calc(var(--spacing) * 2);
+  }
   .h-3 {
     height: calc(var(--spacing) * 3);
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
+  }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
+  .h-11 {
+    height: calc(var(--spacing) * 11);
+  }
+  .h-13 {
+    height: calc(var(--spacing) * 13);
+  }
+  .h-16 {
+    height: calc(var(--spacing) * 16);
   }
   .h-20 {
     height: calc(var(--spacing) * 20);
@@ -727,20 +848,23 @@
   .h-28 {
     height: calc(var(--spacing) * 28);
   }
+  .h-32 {
+    height: calc(var(--spacing) * 32);
+  }
+  .h-33 {
+    height: calc(var(--spacing) * 33);
+  }
+  .h-34 {
+    height: calc(var(--spacing) * 34);
+  }
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
+  .h-52 {
+    height: calc(var(--spacing) * 52);
+  }
   .h-56 {
     height: calc(var(--spacing) * 56);
-  }
-  .h-\[50\] {
-    height: 50;
-  }
-  .h-\[50v\] {
-    height: 50v;
-  }
-  .h-\[50vh\] {
-    height: 50vh;
   }
   .h-\[200px\] {
     height: 200px;
@@ -757,6 +881,45 @@
   .h-screen {
     height: 100vh;
   }
+  .w-0 {
+    width: calc(var(--spacing) * 0);
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
+  }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
+  }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
+  .w-11 {
+    width: calc(var(--spacing) * 11);
+  }
+  .w-16 {
+    width: calc(var(--spacing) * 16);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
+  }
+  .w-40 {
+    width: calc(var(--spacing) * 40);
+  }
   .w-64 {
     width: calc(var(--spacing) * 64);
   }
@@ -772,11 +935,29 @@
   .w-\[400px\] {
     width: 400px;
   }
+  .w-fit {
+    width: fit-content;
+  }
   .w-full {
     width: 100%;
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .origin-bottom-left {
+    transform-origin: bottom left;
+  }
+  .origin-bottom-right {
+    transform-origin: bottom right;
+  }
+  .origin-center {
+    transform-origin: center;
+  }
+  .origin-left {
+    transform-origin: left;
+  }
+  .origin-right {
+    transform-origin: right;
   }
   .-translate-x-1 {
     --tw-translate-x: calc(var(--spacing) * -1);
@@ -786,8 +967,137 @@
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .-rotate-4 {
+    rotate: calc(4deg * -1);
+  }
+  .-rotate-45 {
+    rotate: calc(45deg * -1);
+  }
+  .-rotate-90 {
+    rotate: calc(90deg * -1);
+  }
+  .-rotate-\[0deg\] {
+    rotate: calc(0deg * -1);
+  }
+  .-rotate-\[1-0deg\] {
+    rotate: 1-0deg;
+  }
+  .-rotate-\[1deg\] {
+    rotate: calc(1deg * -1);
+  }
+  .-rotate-\[2deg\] {
+    rotate: calc(2deg * -1);
+  }
+  .-rotate-\[39deg\] {
+    rotate: calc(39deg * -1);
+  }
+  .-rotate-\[3deg\] {
+    rotate: calc(3deg * -1);
+  }
+  .-rotate-\[6deg\] {
+    rotate: calc(6deg * -1);
+  }
+  .-rotate-\[7deg\] {
+    rotate: calc(7deg * -1);
+  }
+  .-rotate-\[8deg\] {
+    rotate: calc(8deg * -1);
+  }
+  .-rotate-\[9deg\] {
+    rotate: calc(9deg * -1);
+  }
+  .-rotate-\[10deg\] {
+    rotate: calc(10deg * -1);
+  }
+  .-rotate-\[50\] {
+    rotate: 50;
+  }
+  .-rotate-\[50d\] {
+    rotate: 50d;
+  }
+  .-rotate-\[50de\] {
+    rotate: 50de;
+  }
+  .-rotate-\[50deg\] {
+    rotate: calc(50deg * -1);
+  }
+  .-rotate-\[50deh\] {
+    rotate: 50deh;
+  }
+  .-rotate-\[55deg\] {
+    rotate: calc(55deg * -1);
+  }
+  .-rotate-\[57deg\] {
+    rotate: calc(57deg * -1);
+  }
+  .-rotate-\[5\] {
+    rotate: 5;
+  }
+  .-rotate-\[5deg\] {
+    rotate: calc(5deg * -1);
+  }
+  .-rotate-\[60deg\] {
+    rotate: calc(60deg * -1);
+  }
+  .-rotate-\[70deg\] {
+    rotate: calc(70deg * -1);
+  }
+  .-rotate-\[80deg\] {
+    rotate: calc(80deg * -1);
+  }
+  .-rotate-\[90deg\] {
+    rotate: calc(90deg * -1);
+  }
+  .-rotate-\[100deg\] {
+    rotate: calc(100deg * -1);
+  }
+  .-rotate-\[120deg\] {
+    rotate: calc(120deg * -1);
+  }
+  .-rotate-\[deg\] {
+    rotate: deg;
+  }
+  .rotate-0 {
+    rotate: 0deg;
+  }
+  .rotate-1 {
+    rotate: 1deg;
+  }
+  .rotate-4 {
+    rotate: 4deg;
+  }
+  .rotate-10 {
+    rotate: 10deg;
+  }
+  .rotate-18 {
+    rotate: 18deg;
+  }
   .rotate-45 {
     rotate: 45deg;
+  }
+  .rotate-90 {
+    rotate: 90deg;
+  }
+  .rotate-180 {
+    rotate: 180deg;
+  }
+  .rotate-\[-57deg\] {
+    rotate: -57deg;
+  }
+  .rotate-\[100deg\] {
+    rotate: 100deg;
+  }
+  .rotate-\[10deg\] {
+    rotate: 10deg;
+  }
+  .rotate-\[120deg\] {
+    rotate: 120deg;
+  }
+  .rotate-\[1deg\] {
+    rotate: 1deg;
+  }
+  .rotate-\[57deg\] {
+    rotate: 57deg;
   }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
@@ -884,11 +1194,41 @@
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
+  .rounded-\[\%\] {
+    border-radius: %;
+  }
+  .rounded-\[1\%\] {
+    border-radius: 1%;
+  }
   .rounded-\[5px\] {
     border-radius: 5px;
   }
+  .rounded-\[9\%\] {
+    border-radius: 9%;
+  }
+  .rounded-\[10\%\] {
+    border-radius: 10%;
+  }
+  .rounded-\[100\%\] {
+    border-radius: 100%;
+  }
+  .rounded-\[100\] {
+    border-radius: 100;
+  }
+  .rounded-\[10\] {
+    border-radius: 10;
+  }
+  .rounded-\[90\%\] {
+    border-radius: 90%;
+  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
+  }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
   }
   .rounded-tl-2xl {
     border-top-left-radius: var(--radius-2xl);
@@ -918,6 +1258,138 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-8 {
+    border-style: var(--tw-border-style);
+    border-width: 8px;
+  }
+  .border-10 {
+    border-style: var(--tw-border-style);
+    border-width: 10px;
+  }
+  .border-13 {
+    border-style: var(--tw-border-style);
+    border-width: 13px;
+  }
+  .border-14 {
+    border-style: var(--tw-border-style);
+    border-width: 14px;
+  }
+  .border-15 {
+    border-style: var(--tw-border-style);
+    border-width: 15px;
+  }
+  .border-16 {
+    border-style: var(--tw-border-style);
+    border-width: 16px;
+  }
+  .border-t-30 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 30px;
+  }
+  .border-r-30 {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 30px;
+  }
+  .border-r-\[10px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 10px;
+  }
+  .border-r-\[20px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 20px;
+  }
+  .border-r-\[30px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 30px;
+  }
+  .border-r-\[50px\] {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 50px;
+  }
+  .border-b-30 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 30px;
+  }
+  .border-b-\[00px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 00px;
+  }
+  .border-b-\[0px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 0px;
+  }
+  .border-b-\[30px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 30px;
+  }
+  .border-b-\[100px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 100px;
+  }
+  .border-b-\[10px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 10px;
+  }
+  .border-b-\[500px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 500px;
+  }
+  .border-b-\[50px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 50px;
+  }
+  .border-l-30 {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 30px;
+  }
+  .border-l-\[0px\] {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 0px;
+  }
+  .border-l-\[10px\] {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 10px;
+  }
+  .border-l-\[30px\] {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 30px;
+  }
+  .border-l-\[50px\] {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 50px;
+  }
+  .border-solid {
+    --tw-border-style: solid;
+    border-style: solid;
+  }
+  .border-black {
+    border-color: var(--color-black);
+  }
+  .border-transparent {
+    border-color: transparent;
+  }
+  .border-t-black {
+    border-top-color: var(--color-black);
+  }
+  .border-t-blue-50 {
+    border-top-color: var(--color-blue-50);
+  }
+  .border-t-blue-500 {
+    border-top-color: var(--color-blue-500);
+  }
+  .border-r-transparent {
+    border-right-color: transparent;
+  }
+  .border-b-blue-500 {
+    border-bottom-color: var(--color-blue-500);
+  }
+  .border-l-transparent {
+    border-left-color: transparent;
+  }
   .bg-\[\#131414\] {
     background-color: #131414;
   }
@@ -942,14 +1414,32 @@
   .bg-\[\#fff\] {
     background-color: #fff;
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
+  }
+  .bg-blue-600 {
+    background-color: var(--color-blue-600);
+  }
   .bg-green-800 {
     background-color: var(--color-green-800);
   }
   .bg-primary {
     background-color: var(--color-primary);
   }
+  .bg-red-500 {
+    background-color: var(--color-red-500);
+  }
+  .bg-red-600 {
+    background-color: var(--color-red-600);
+  }
   .bg-slate-900 {
     background-color: var(--color-slate-900);
+  }
+  .bg-transparent {
+    background-color: transparent;
   }
   .bg-white {
     background-color: var(--color-white);
@@ -1073,6 +1563,10 @@
     font-size: var(--text-7xl);
     line-height: var(--tw-leading, var(--text-7xl--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
@@ -1130,6 +1624,9 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .caret-lime-50 {
+    caret-color: var(--color-lime-50);
   }
   .opacity-40 {
     opacity: 40%;
@@ -1563,11 +2060,6 @@
   .lg\:pl-16 {
     @media (width >= 64rem) {
       padding-left: calc(var(--spacing) * 16);
-    }
-  }
-  .lg\:text-center {
-    @media (width >= 64rem) {
-      text-align: center;
     }
   }
   .lg\:text-left {
