--- a/src/output.css
+++ b/src/output.css
@@ -548,6 +548,9 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-2 {
+    top: calc(var(--spacing) * 2);
+  }
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
@@ -566,38 +569,14 @@
   .top-\[20px\] {
     top: 20px;
   }
-  .-right-0 {
-    right: calc(var(--spacing) * -0);
-  }
-  .-right-1 {
-    right: calc(var(--spacing) * -1);
-  }
-  .-right-2 {
-    right: calc(var(--spacing) * -2);
-  }
-  .-right-3 {
-    right: calc(var(--spacing) * -3);
-  }
   .-right-5 {
     right: calc(var(--spacing) * -5);
   }
   .-right-9 {
     right: calc(var(--spacing) * -9);
   }
-  .-right-10 {
-    right: calc(var(--spacing) * -10);
-  }
-  .-right-11 {
-    right: calc(var(--spacing) * -11);
-  }
-  .-right-16 {
-    right: calc(var(--spacing) * -16);
-  }
-  .-right-20 {
-    right: calc(var(--spacing) * -20);
-  }
-  .-right-110 {
-    right: calc(var(--spacing) * -110);
+  .-right-\[37px\] {
+    right: calc(37px * -1);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -608,20 +587,107 @@
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
-  }
   .right-5 {
     right: calc(var(--spacing) * 5);
   }
-  .right-6 {
-    right: calc(var(--spacing) * 6);
+  .right-8 {
+    right: calc(var(--spacing) * 8);
+  }
+  .right-9 {
+    right: calc(var(--spacing) * 9);
+  }
+  .right-10 {
+    right: calc(var(--spacing) * 10);
   }
   .right-\[0px\] {
     right: 0px;
   }
+  .right-\[5px\] {
+    right: 5px;
+  }
+  .right-\[10px\] {
+    right: 10px;
+  }
+  .right-\[11px\] {
+    right: 11px;
+  }
+  .right-\[12\] {
+    right: 12;
+  }
+  .right-\[12p\] {
+    right: 12p;
+  }
+  .right-\[1\] {
+    right: 1;
+  }
+  .right-\[1px\] {
+    right: 1px;
+  }
+  .right-\[20px\] {
+    right: 20px;
+  }
+  .right-\[25px\] {
+    right: 25px;
+  }
+  .right-\[2px\] {
+    right: 2px;
+  }
+  .right-\[4px\] {
+    right: 4px;
+  }
+  .right-\[12px\] {
+    right: 12px;
+  }
+  .right-\[15px\] {
+    right: 15px;
+  }
+  .right-\[17px\] {
+    right: 17px;
+  }
+  .right-\[22px\] {
+    right: 22px;
+  }
+  .right-\[23px\] {
+    right: 23px;
+  }
+  .right-\[30px\] {
+    right: 30px;
+  }
+  .right-\[34px\] {
+    right: 34px;
+  }
+  .right-\[37\] {
+    right: 37;
+  }
+  .right-\[37px\] {
+    right: 37px;
+  }
+  .right-\[38px\] {
+    right: 38px;
+  }
+  .right-\[3\] {
+    right: 3;
+  }
+  .right-\[3px\] {
+    right: 3px;
+  }
   .right-\[40px\] {
     right: 40px;
+  }
+  .right-\[45px\] {
+    right: 45px;
+  }
+  .right-\[50\%\] {
+    right: 50%;
+  }
+  .right-\[50\] {
+    right: 50;
+  }
+  .right-\[50px\] {
+    right: 50px;
+  }
+  .right-\[px\] {
+    right: px;
   }
   .-bottom-0 {
     bottom: calc(var(--spacing) * -0);
@@ -635,8 +701,41 @@
   .-bottom-3 {
     bottom: calc(var(--spacing) * -3);
   }
-  .-bottom-5 {
-    bottom: calc(var(--spacing) * -5);
+  .-bottom-4 {
+    bottom: calc(var(--spacing) * -4);
+  }
+  .-bottom-\[5px\] {
+    bottom: calc(5px * -1);
+  }
+  .-bottom-\[10px\] {
+    bottom: calc(10px * -1);
+  }
+  .-bottom-\[14-\] {
+    bottom: calc(14- * -1);
+  }
+  .-bottom-\[14\] {
+    bottom: calc(14 * -1);
+  }
+  .-bottom-\[14px\] {
+    bottom: calc(14px * -1);
+  }
+  .-bottom-\[1\] {
+    bottom: calc(1 * -1);
+  }
+  .-bottom-\[1px\] {
+    bottom: calc(1px * -1);
+  }
+  .-bottom-\[2px\] {
+    bottom: calc(2px * -1);
+  }
+  .-bottom-\[3px\] {
+    bottom: calc(3px * -1);
+  }
+  .-bottom-\[4px\] {
+    bottom: calc(4px * -1);
+  }
+  .-bottom-\[px\] {
+    bottom: calc(px * -1);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -653,11 +752,20 @@
   .bottom-5 {
     bottom: calc(var(--spacing) * 5);
   }
-  .bottom-\[1\] {
-    bottom: 1;
+  .bottom-7 {
+    bottom: calc(var(--spacing) * 7);
   }
-  .bottom-\[1p\] {
-    bottom: 1p;
+  .bottom-8 {
+    bottom: calc(var(--spacing) * 8);
+  }
+  .bottom-9 {
+    bottom: calc(var(--spacing) * 9);
+  }
+  .bottom-10 {
+    bottom: calc(var(--spacing) * 10);
+  }
+  .bottom-90 {
+    bottom: calc(var(--spacing) * 90);
   }
   .bottom-\[1px\] {
     bottom: 1px;
@@ -665,14 +773,20 @@
   .-left-5 {
     left: calc(var(--spacing) * -5);
   }
-  .left-0 {
-    left: calc(var(--spacing) * 0);
-  }
   .left-1 {
     left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
+  }
+  .left-\[51\%\] {
+    left: 51%;
+  }
+  .left-\[51\] {
+    left: 51;
+  }
+  .left-\[5\] {
+    left: 5;
   }
   .left-\[30\%\] {
     left: 30%;
@@ -680,26 +794,29 @@
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .z-2 {
+    z-index: 2;
+  }
+  .z-3 {
+    z-index: 3;
+  }
   .z-4 {
     z-index: 4;
   }
   .z-5 {
     z-index: 5;
   }
-  .z-10 {
-    z-index: 10;
-  }
   .z-20 {
     z-index: 20;
+  }
+  .z-30 {
+    z-index: 30;
   }
   .z-40 {
     z-index: 40;
   }
   .z-50 {
     z-index: 50;
-  }
-  .clear-both {
-    clear: both;
   }
   .container {
     width: 100%;
@@ -721,6 +838,12 @@
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .my-1 {
+    margin-block: calc(var(--spacing) * 1);
+  }
+  .my-5 {
+    margin-block: calc(var(--spacing) * 5);
   }
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
@@ -760,10 +883,6 @@
   }
   .table {
     display: table;
-  }
-  .size-1 {
-    width: calc(var(--spacing) * 1);
-    height: calc(var(--spacing) * 1);
   }
   .size-4 {
     width: calc(var(--spacing) * 4);
@@ -821,23 +940,20 @@
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
   .h-5 {
     height: calc(var(--spacing) * 5);
   }
-  .h-6 {
-    height: calc(var(--spacing) * 6);
+  .h-7 {
+    height: calc(var(--spacing) * 7);
+  }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
   }
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-11 {
-    height: calc(var(--spacing) * 11);
-  }
-  .h-13 {
-    height: calc(var(--spacing) * 13);
+  .h-14 {
+    height: calc(var(--spacing) * 14);
   }
   .h-16 {
     height: calc(var(--spacing) * 16);
@@ -851,12 +967,6 @@
   .h-32 {
     height: calc(var(--spacing) * 32);
   }
-  .h-33 {
-    height: calc(var(--spacing) * 33);
-  }
-  .h-34 {
-    height: calc(var(--spacing) * 34);
-  }
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
@@ -866,6 +976,36 @@
   .h-56 {
     height: calc(var(--spacing) * 56);
   }
+  .h-\[100\] {
+    height: 100;
+  }
+  .h-\[100px\] {
+    height: 100px;
+  }
+  .h-\[10\] {
+    height: 10;
+  }
+  .h-\[10px\] {
+    height: 10px;
+  }
+  .h-\[110px\] {
+    height: 110px;
+  }
+  .h-\[111px\] {
+    height: 111px;
+  }
+  .h-\[113px\] {
+    height: 113px;
+  }
+  .h-\[11px\] {
+    height: 11px;
+  }
+  .h-\[120px\] {
+    height: 120px;
+  }
+  .h-\[1\] {
+    height: 1;
+  }
   .h-\[200px\] {
     height: 200px;
   }
@@ -874,6 +1014,9 @@
   }
   .h-\[300\%\] {
     height: 300%;
+  }
+  .h-fit {
+    height: fit-content;
   }
   .h-full {
     height: 100%;
@@ -893,32 +1036,29 @@
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
-  .w-4 {
-    width: calc(var(--spacing) * 4);
-  }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
-  }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
+  .w-8 {
+    width: calc(var(--spacing) * 8);
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
-  .w-11 {
-    width: calc(var(--spacing) * 11);
+  .w-12 {
+    width: calc(var(--spacing) * 12);
+  }
+  .w-14 {
+    width: calc(var(--spacing) * 14);
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
+  .w-26 {
+    width: calc(var(--spacing) * 26);
+  }
+  .w-28 {
+    width: calc(var(--spacing) * 28);
   }
   .w-32 {
     width: calc(var(--spacing) * 32);
-  }
-  .w-40 {
-    width: calc(var(--spacing) * 40);
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
@@ -944,21 +1084,6 @@
   .border-collapse {
     border-collapse: collapse;
   }
-  .origin-bottom-left {
-    transform-origin: bottom left;
-  }
-  .origin-bottom-right {
-    transform-origin: bottom right;
-  }
-  .origin-center {
-    transform-origin: center;
-  }
-  .origin-left {
-    transform-origin: left;
-  }
-  .origin-right {
-    transform-origin: right;
-  }
   .-translate-x-1 {
     --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -967,143 +1092,86 @@
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-rotate-4 {
-    rotate: calc(4deg * -1);
-  }
-  .-rotate-45 {
-    rotate: calc(45deg * -1);
-  }
-  .-rotate-90 {
-    rotate: calc(90deg * -1);
-  }
-  .-rotate-\[0deg\] {
-    rotate: calc(0deg * -1);
-  }
-  .-rotate-\[1-0deg\] {
-    rotate: 1-0deg;
-  }
   .-rotate-\[1deg\] {
     rotate: calc(1deg * -1);
   }
   .-rotate-\[2deg\] {
     rotate: calc(2deg * -1);
   }
-  .-rotate-\[39deg\] {
-    rotate: calc(39deg * -1);
-  }
   .-rotate-\[3deg\] {
     rotate: calc(3deg * -1);
   }
-  .-rotate-\[6deg\] {
-    rotate: calc(6deg * -1);
-  }
-  .-rotate-\[7deg\] {
-    rotate: calc(7deg * -1);
-  }
-  .-rotate-\[8deg\] {
-    rotate: calc(8deg * -1);
-  }
-  .-rotate-\[9deg\] {
-    rotate: calc(9deg * -1);
-  }
-  .-rotate-\[10deg\] {
-    rotate: calc(10deg * -1);
-  }
-  .-rotate-\[50\] {
-    rotate: 50;
-  }
-  .-rotate-\[50d\] {
-    rotate: 50d;
-  }
-  .-rotate-\[50de\] {
-    rotate: 50de;
-  }
-  .-rotate-\[50deg\] {
-    rotate: calc(50deg * -1);
-  }
-  .-rotate-\[50deh\] {
-    rotate: 50deh;
-  }
-  .-rotate-\[55deg\] {
-    rotate: calc(55deg * -1);
-  }
-  .-rotate-\[57deg\] {
-    rotate: calc(57deg * -1);
-  }
-  .-rotate-\[5\] {
-    rotate: 5;
+  .-rotate-\[4deg\] {
+    rotate: calc(4deg * -1);
   }
   .-rotate-\[5deg\] {
     rotate: calc(5deg * -1);
   }
-  .-rotate-\[60deg\] {
-    rotate: calc(60deg * -1);
+  .-rotate-\[18deg\] {
+    rotate: calc(18deg * -1);
   }
-  .-rotate-\[70deg\] {
-    rotate: calc(70deg * -1);
-  }
-  .-rotate-\[80deg\] {
-    rotate: calc(80deg * -1);
+  .-rotate-\[41deg\] {
+    rotate: calc(41deg * -1);
   }
   .-rotate-\[90deg\] {
     rotate: calc(90deg * -1);
   }
-  .-rotate-\[100deg\] {
-    rotate: calc(100deg * -1);
+  .-rotate-\[9deg\] {
+    rotate: calc(9deg * -1);
   }
-  .-rotate-\[120deg\] {
-    rotate: calc(120deg * -1);
+  .-rotate-\[39deg\] {
+    rotate: calc(39deg * -1);
+  }
+  .-rotate-\[180deg\] {
+    rotate: calc(180deg * -1);
   }
   .-rotate-\[deg\] {
     rotate: deg;
   }
-  .rotate-0 {
-    rotate: 0deg;
-  }
-  .rotate-1 {
-    rotate: 1deg;
-  }
-  .rotate-4 {
-    rotate: 4deg;
-  }
-  .rotate-10 {
-    rotate: 10deg;
-  }
-  .rotate-18 {
-    rotate: 18deg;
-  }
   .rotate-45 {
     rotate: 45deg;
   }
-  .rotate-90 {
+  .rotate-\[60\] {
+    rotate: 60;
+  }
+  .rotate-\[61\] {
+    rotate: 61;
+  }
+  .rotate-\[6\] {
+    rotate: 6;
+  }
+  .rotate-\[90deg\] {
     rotate: 90deg;
   }
-  .rotate-180 {
+  .rotate-\[180\] {
+    rotate: 180;
+  }
+  .rotate-\[180d\] {
+    rotate: 180d;
+  }
+  .rotate-\[180de\] {
+    rotate: 180de;
+  }
+  .rotate-\[180deg\] {
     rotate: 180deg;
   }
-  .rotate-\[-57deg\] {
-    rotate: -57deg;
+  .rotate-\[18\] {
+    rotate: 18;
   }
-  .rotate-\[100deg\] {
-    rotate: 100deg;
-  }
-  .rotate-\[10deg\] {
-    rotate: 10deg;
-  }
-  .rotate-\[120deg\] {
-    rotate: 120deg;
-  }
-  .rotate-\[1deg\] {
-    rotate: 1deg;
-  }
-  .rotate-\[57deg\] {
-    rotate: 57deg;
+  .rotate-\[1\] {
+    rotate: 1;
   }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .animate-bounce {
     animation: var(--animate-bounce);
+  }
+  .animate-ping {
+    animation: var(--animate-ping);
+  }
+  .animate-pulse {
+    animation: var(--animate-pulse);
   }
   .animate-spin {
     animation: var(--animate-spin);
@@ -1194,41 +1262,11 @@
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
-  .rounded-\[\%\] {
-    border-radius: %;
-  }
-  .rounded-\[1\%\] {
-    border-radius: 1%;
-  }
   .rounded-\[5px\] {
     border-radius: 5px;
   }
-  .rounded-\[9\%\] {
-    border-radius: 9%;
-  }
-  .rounded-\[10\%\] {
-    border-radius: 10%;
-  }
-  .rounded-\[100\%\] {
-    border-radius: 100%;
-  }
-  .rounded-\[100\] {
-    border-radius: 100;
-  }
-  .rounded-\[10\] {
-    border-radius: 10;
-  }
-  .rounded-\[90\%\] {
-    border-radius: 90%;
-  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
-  }
-  .rounded-lg {
-    border-radius: var(--radius-lg);
-  }
-  .rounded-xl {
-    border-radius: var(--radius-xl);
   }
   .rounded-tl-2xl {
     border-top-left-radius: var(--radius-2xl);
@@ -1262,105 +1300,33 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-8 {
+  .border-2 {
     border-style: var(--tw-border-style);
-    border-width: 8px;
+    border-width: 2px;
   }
-  .border-10 {
+  .border-9 {
     border-style: var(--tw-border-style);
-    border-width: 10px;
+    border-width: 9px;
+  }
+  .border-11 {
+    border-style: var(--tw-border-style);
+    border-width: 11px;
+  }
+  .border-12 {
+    border-style: var(--tw-border-style);
+    border-width: 12px;
   }
   .border-13 {
     border-style: var(--tw-border-style);
     border-width: 13px;
   }
-  .border-14 {
-    border-style: var(--tw-border-style);
-    border-width: 14px;
-  }
-  .border-15 {
-    border-style: var(--tw-border-style);
-    border-width: 15px;
-  }
-  .border-16 {
-    border-style: var(--tw-border-style);
-    border-width: 16px;
-  }
-  .border-t-30 {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 30px;
-  }
-  .border-r-30 {
+  .border-r {
     border-right-style: var(--tw-border-style);
-    border-right-width: 30px;
+    border-right-width: 1px;
   }
-  .border-r-\[10px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 10px;
-  }
-  .border-r-\[20px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 20px;
-  }
-  .border-r-\[30px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 30px;
-  }
-  .border-r-\[50px\] {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 50px;
-  }
-  .border-b-30 {
+  .border-b {
     border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 30px;
-  }
-  .border-b-\[00px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 00px;
-  }
-  .border-b-\[0px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 0px;
-  }
-  .border-b-\[30px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 30px;
-  }
-  .border-b-\[100px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 100px;
-  }
-  .border-b-\[10px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 10px;
-  }
-  .border-b-\[500px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 500px;
-  }
-  .border-b-\[50px\] {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 50px;
-  }
-  .border-l-30 {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 30px;
-  }
-  .border-l-\[0px\] {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 0px;
-  }
-  .border-l-\[10px\] {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 10px;
-  }
-  .border-l-\[30px\] {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 30px;
-  }
-  .border-l-\[50px\] {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 50px;
+    border-bottom-width: 1px;
   }
   .border-solid {
     --tw-border-style: solid;
@@ -1369,26 +1335,32 @@
   .border-black {
     border-color: var(--color-black);
   }
+  .border-red-600 {
+    border-color: var(--color-red-600);
+  }
   .border-transparent {
     border-color: transparent;
   }
-  .border-t-black {
-    border-top-color: var(--color-black);
+  .border-white {
+    border-color: var(--color-white);
   }
-  .border-t-blue-50 {
-    border-top-color: var(--color-blue-50);
+  .border-white\/3 {
+    border-color: color-mix(in oklab, var(--color-white) 3%, transparent);
+  }
+  .border-white\/30 {
+    border-color: color-mix(in oklab, var(--color-white) 30%, transparent);
+  }
+  .border-white\/50 {
+    border-color: color-mix(in oklab, var(--color-white) 50%, transparent);
   }
   .border-t-blue-500 {
     border-top-color: var(--color-blue-500);
   }
-  .border-r-transparent {
-    border-right-color: transparent;
+  .border-t-primary {
+    border-top-color: var(--color-primary);
   }
-  .border-b-blue-500 {
-    border-bottom-color: var(--color-blue-500);
-  }
-  .border-l-transparent {
-    border-left-color: transparent;
+  .border-t-white {
+    border-top-color: var(--color-white);
   }
   .bg-\[\#131414\] {
     background-color: #131414;
@@ -1414,14 +1386,8 @@
   .bg-\[\#fff\] {
     background-color: #fff;
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
-  }
-  .bg-blue-600 {
-    background-color: var(--color-blue-600);
   }
   .bg-green-800 {
     background-color: var(--color-green-800);
@@ -1429,17 +1395,8 @@
   .bg-primary {
     background-color: var(--color-primary);
   }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
-  }
-  .bg-red-600 {
-    background-color: var(--color-red-600);
-  }
   .bg-slate-900 {
     background-color: var(--color-slate-900);
-  }
-  .bg-transparent {
-    background-color: transparent;
   }
   .bg-white {
     background-color: var(--color-white);
@@ -1571,6 +1528,15 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
+  .text-\[11px\] {
+    font-size: 11px;
+  }
+  .text-\[12px\] {
+    font-size: 12px;
+  }
   .text-\[20px\] {
     font-size: 20px;
   }
@@ -1601,6 +1567,12 @@
   .text-\[\#222222\] {
     color: #222222;
   }
+  .text-\[10\] {
+    color: 10;
+  }
+  .text-black {
+    color: var(--color-black);
+  }
   .text-gray-300 {
     color: var(--color-gray-300);
   }
@@ -1624,9 +1596,6 @@
   }
   .underline {
     text-decoration-line: underline;
-  }
-  .caret-lime-50 {
-    caret-color: var(--color-lime-50);
   }
   .opacity-40 {
     opacity: 40%;
@@ -1683,6 +1652,9 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .outline-black {
+    outline-color: var(--color-black);
+  }
   .grayscale {
     --tw-grayscale: grayscale(100%);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -1718,6 +1690,10 @@
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
+  }
+  .duration-\[2s\] {
+    --tw-duration: 2s;
+    transition-duration: 2s;
   }
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
@@ -1927,9 +1903,44 @@
       height: 100vh;
     }
   }
+  .md\:w-3 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 3);
+    }
+  }
+  .md\:w-5 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 5);
+    }
+  }
+  .md\:w-32 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
   .md\:w-52 {
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 52);
+    }
+  }
+  .md\:w-\[100\] {
+    @media (width >= 48rem) {
+      width: 100;
+    }
+  }
+  .md\:w-\[100px\] {
+    @media (width >= 48rem) {
+      width: 100px;
+    }
+  }
+  .md\:w-\[10\] {
+    @media (width >= 48rem) {
+      width: 10;
+    }
+  }
+  .md\:w-\[1\] {
+    @media (width >= 48rem) {
+      width: 1;
     }
   }
   .md\:w-\[30\%\] {
