--- a/src/output.css
+++ b/src/output.css
@@ -560,12 +560,6 @@
   .top-6 {
     top: calc(var(--spacing) * 6);
   }
-  .top-\[5\%\] {
-    top: 5%;
-  }
-  .top-\[20px\] {
-    top: 20px;
-  }
   .top-\[100px\] {
     top: 100px;
   }
@@ -574,6 +568,12 @@
   }
   .top-\[1px\] {
     top: 1px;
+  }
+  .top-\[5\%\] {
+    top: 5%;
+  }
+  .top-\[20px\] {
+    top: 20px;
   }
   .-right-9 {
     right: calc(var(--spacing) * -9);
@@ -796,18 +796,6 @@
   .h-\[0px\] {
     height: 0px;
   }
-  .h-\[6px\] {
-    height: 6px;
-  }
-  .h-\[8px\] {
-    height: 8px;
-  }
-  .h-\[10px\] {
-    height: 10px;
-  }
-  .h-\[35px\] {
-    height: 35px;
-  }
   .h-\[40px\] {
     height: 40px;
   }
@@ -817,11 +805,17 @@
   .h-\[4px\] {
     height: 4px;
   }
-  .h-\[50px\] {
-    height: 50px;
+  .h-\[35px\] {
+    height: 35px;
   }
   .h-\[55\] {
     height: 55;
+  }
+  .h-\[5\] {
+    height: 5;
+  }
+  .h-\[6px\] {
+    height: 6px;
   }
   .h-\[55p\] {
     height: 55p;
@@ -829,32 +823,11 @@
   .h-\[55px\] {
     height: 55px;
   }
-  .h-\[57px\] {
-    height: 57px;
-  }
-  .h-\[5\] {
-    height: 5;
-  }
   .h-\[5px\] {
     height: 5px;
   }
-  .h-\[20px\] {
-    height: 20px;
-  }
-  .h-\[60px\] {
-    height: 60px;
-  }
-  .h-\[62px\] {
-    height: 62px;
-  }
-  .h-\[64px\] {
-    height: 64px;
-  }
-  .h-\[65px\] {
-    height: 65px;
-  }
-  .h-\[67px\] {
-    height: 67px;
+  .h-\[10px\] {
+    height: 10px;
   }
   .h-\[70\] {
     height: 70;
@@ -873,6 +846,33 @@
   }
   .h-\[7px\] {
     height: 7px;
+  }
+  .h-\[8px\] {
+    height: 8px;
+  }
+  .h-\[20px\] {
+    height: 20px;
+  }
+  .h-\[50px\] {
+    height: 50px;
+  }
+  .h-\[57px\] {
+    height: 57px;
+  }
+  .h-\[60px\] {
+    height: 60px;
+  }
+  .h-\[62px\] {
+    height: 62px;
+  }
+  .h-\[64px\] {
+    height: 64px;
+  }
+  .h-\[65px\] {
+    height: 65px;
+  }
+  .h-\[67px\] {
+    height: 67px;
   }
   .h-\[80px\] {
     height: 80px;
@@ -907,6 +907,9 @@
   .h-screen {
     height: 100vh;
   }
+  .min-h-screen {
+    min-height: 100vh;
+  }
   .w-0 {
     width: calc(var(--spacing) * 0);
   }
@@ -928,14 +931,11 @@
   .w-\[0px\] {
     width: 0px;
   }
-  .w-\[70\%\] {
-    width: 70%;
+  .w-\[6px\] {
+    width: 6px;
   }
   .w-\[7px\] {
     width: 7px;
-  }
-  .w-\[10px\] {
-    width: 10px;
   }
   .w-\[40px\] {
     width: 40px;
@@ -967,6 +967,9 @@
   .w-\[5px\] {
     width: 5px;
   }
+  .w-\[10px\] {
+    width: 10px;
+  }
   .w-\[60px\] {
     width: 60px;
   }
@@ -976,8 +979,8 @@
   .w-\[67px\] {
     width: 67px;
   }
-  .w-\[6px\] {
-    width: 6px;
+  .w-\[70\%\] {
+    width: 70%;
   }
   .w-\[70\] {
     width: 70;
