--- a/src/output.css
+++ b/src/output.css
@@ -963,6 +963,9 @@
   .overflow-x-hidden {
     overflow-x: hidden;
   }
+  .rounded {
+    border-radius: 0.25rem;
+  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
@@ -1184,6 +1187,9 @@
   }
   .pb-26 {
     padding-bottom: calc(var(--spacing) * 26);
+  }
+  .pb-32 {
+    padding-bottom: calc(var(--spacing) * 32);
   }
   .pb-36 {
     padding-bottom: calc(var(--spacing) * 36);
