--- a/src/output.css
+++ b/src/output.css
@@ -2062,6 +2062,12 @@
       opacity: 70%;
     }
   }
+  .md\:grayscale-100 {
+    @media (width >= 48rem) {
+      --tw-grayscale: grayscale(100%);
+      filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+    }
+  }
   .before\:md\:block {
     &::before {
       content: var(--tw-content);
