--- a/public/Night & Day/theme.css
+++ b/public/Night & Day/theme.css
@@ -22,7 +22,6 @@ body.lightMode .text-left {
     color: #414141;
     transition: all 300ms;
 }
-
 body.lightMode #moreAboutMeBtn {
     color: #585858;
     transition: all 300ms;
@@ -67,7 +66,7 @@ body.lightMode .myParagraph {
 }
 
 /* Background and color adjustments for various elements */
-body.lightMode .rounded-3xl {
+body.lightMode .rounded-3xl:not(.themeButton) {
     background-color: rgba(226, 226, 226, 0.616);
     color: rgb(7, 7, 7);
     transition: all 300ms;
@@ -88,7 +87,7 @@ body.lightMode .or {
     transition: all 300ms;
 }
 
-body.darkMode .themeButton {
+ /* body.darkMode .themeButton {
     color: black;
     background-color: white;
     transition: all 300ms;
@@ -97,7 +96,7 @@ body.lightMode .themeButton {
     color: white;
     background-color: black;
     transition: all 300ms;
-}
+} */
 
 body.lightMode .personal {
     color: black;
@@ -135,16 +134,5 @@ body.lightMode #homeIcon:not(.firstHomeIcon):not(.secondFirstHomeIcon):not(.seco
 
 body.lightMode #homeIcon:hover {
     background-color: #ffb400;
-    transition: all 300ms;
-}
-
-/* Theme button settings */
-.themeButton {
-    transition: transform 0.3s ease-in-out;
-    transition: all 300ms;
-}
-
-.themeButton:active {
-    transform: rotate(360deg);
     transition: all 300ms;
 }
